file paths : ipynb vs py files

--- a/DSA-Python/trees_bst.ipynb
+++ b/DSA-Python/trees_bst.ipynb
@@ -17,7 +17,12 @@
     "    <li>Binary Tree : every node has max 2 nodes</li>\n",
     "    <li>Binary Search Tree : elements in left subtree are lesser than the element in current node \n",
     "    wheras elements in right subtree are greater than the element in current node</li>\n",
-    "    <li></li>\n",
+    "</ul>\n",
+    "\n",
+    "<h5> Note : </h5>\n",
+    "<ul>\n",
+    "    <li><p>Codebasics - Yt / video - Binary Tree Part 1 | BST | Binary Search Tree : about building a BST, exercise : find_min(), find_max(), pre & post order traversal</p></li>\n",
+    "    <li><p>Codebasics - Yt / video - Binary Tree Part 2 | deletion</p></li>\n",
     "</ul>"
    ]
   },
