--- a/decorators/decorators.ipynb
+++ b/decorators/decorators.ipynb
@@ -234,6 +234,43 @@
     "if __name__ == \"__main__\":\n",
     "    print(add())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### codeyug - Yt | Multiple Decorators on a Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decor2(fun): # returns name in the form of list of first and last name\n",
+    "    def main():\n",
+    "        return fun().split()\n",
+    "    return main\n",
+    "\n",
+    "\n",
+    "def decor1(fun): # convert name to upper case\n",
+    "    def main():\n",
+    "        return fun().upper()\n",
+    "    return main\n",
+    "\n",
+    "@decor2 \n",
+    "@decor1\n",
+    "def get_name():\n",
+    "    firstname = input(\"enter first name\")\n",
+    "    lastname = input(\"enter last name\")\n",
+    "    return firstname + \" \" +lastname\n",
+    "\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    print(get_name())"
+   ]
   }
  ],
  "metadata": {
