--- a/fibonacci/fibonacci.ipynb
+++ b/fibonacci/fibonacci.ipynb
@@ -29,6 +29,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "** Fibonacci Series Chart (verification - use) **\n",
+      "\n",
+      "Postition : 1  |  Value :  0  |  Index :  0\n",
+      "Postition : 2  |  Value :  1  |  Index :  1\n",
+      "Postition : 3  |  Value :  1  |  Index :  2\n",
+      "Postition : 4  |  Value :  2  |  Index :  3\n",
+      "Postition : 5  |  Value :  3  |  Index :  4\n",
+      "Postition : 6  |  Value :  5  |  Index :  5\n",
+      "Postition : 7  |  Value :  8  |  Index :  6\n",
+      "Postition : 8  |  Value :  13  |  Index :  7\n",
+      "Postition : 9  |  Value :  21  |  Index :  8\n",
+      "Postition : 10  |  Value :  34  |  Index :  9\n",
+      "Postition : 11  |  Value :  55  |  Index :  10\n",
+      "Postition : 12  |  Value :  89  |  Index :  11\n",
+      "Postition : 13  |  Value :  144  |  Index :  12\n",
+      "Postition : 14  |  Value :  233  |  Index :  13\n",
+      "Postition : 15  |  Value :  377  |  Index :  14\n",
+      "Postition : 16  |  Value :  610  |  Index :  15\n",
+      "Postition : 17  |  Value :  987  |  Index :  16\n",
+      "Postition : 18  |  Value :  1597  |  Index :  17\n",
+      "Postition : 19  |  Value :  2584  |  Index :  18\n",
+      "Postition : 20  |  Value :  4181  |  Index :  19\n",
+      "Postition : 21  |  Value :  6765  |  Index :  20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fibonacci series chart (verification)\n",
+    "\n",
+    "def original_fib():\n",
+    "    print(\"** Fibonacci Series Chart (verification - use) **\")\n",
+    "    print()\n",
+    "    fib = 0, 1, 1, 2, 3, 5, 8, 13, 21, 34,55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181,6765,\n",
+    "    for i,j in enumerate(fib):\n",
+    "        print(\"Postition : \" + str(i+1), \" | \", \"Value : \", str(j), \" | \",\"Index : \", str(i))\n",
+    "original_fib()\n",
+    "\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -62,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -70,51 +118,29 @@
      "output_type": "stream",
      "text": [
       "Value of 10th term of the fibonacci = 34\n",
-      "*****VERIFY******\n",
-      "postion : 1\n",
-      "index : 0\n",
-      "value : 0\n",
+      "** Fibonacci Series Chart (verification - use) **\n",
       "\n",
-      "postion : 2\n",
-      "index : 1\n",
-      "value : 1\n",
-      "\n",
-      "postion : 3\n",
-      "index : 2\n",
-      "value : 1\n",
-      "\n",
-      "postion : 4\n",
-      "index : 3\n",
-      "value : 2\n",
-      "\n",
-      "postion : 5\n",
-      "index : 4\n",
-      "value : 3\n",
-      "\n",
-      "postion : 6\n",
-      "index : 5\n",
-      "value : 5\n",
-      "\n",
-      "postion : 7\n",
-      "index : 6\n",
-      "value : 8\n",
-      "\n",
-      "postion : 8\n",
-      "index : 7\n",
-      "value : 13\n",
-      "\n",
-      "postion : 9\n",
-      "index : 8\n",
-      "value : 21\n",
-      "\n",
-      "postion : 10\n",
-      "index : 9\n",
-      "value : 34\n",
-      "\n",
-      "postion : 11\n",
-      "index : 10\n",
-      "value : 55\n",
-      "\n"
+      "Postition : 1  |  Value :  0  |  Index :  0\n",
+      "Postition : 2  |  Value :  1  |  Index :  1\n",
+      "Postition : 3  |  Value :  1  |  Index :  2\n",
+      "Postition : 4  |  Value :  2  |  Index :  3\n",
+      "Postition : 5  |  Value :  3  |  Index :  4\n",
+      "Postition : 6  |  Value :  5  |  Index :  5\n",
+      "Postition : 7  |  Value :  8  |  Index :  6\n",
+      "Postition : 8  |  Value :  13  |  Index :  7\n",
+      "Postition : 9  |  Value :  21  |  Index :  8\n",
+      "Postition : 10  |  Value :  34  |  Index :  9\n",
+      "Postition : 11  |  Value :  55  |  Index :  10\n",
+      "Postition : 12  |  Value :  89  |  Index :  11\n",
+      "Postition : 13  |  Value :  144  |  Index :  12\n",
+      "Postition : 14  |  Value :  233  |  Index :  13\n",
+      "Postition : 15  |  Value :  377  |  Index :  14\n",
+      "Postition : 16  |  Value :  610  |  Index :  15\n",
+      "Postition : 17  |  Value :  987  |  Index :  16\n",
+      "Postition : 18  |  Value :  1597  |  Index :  17\n",
+      "Postition : 19  |  Value :  2584  |  Index :  18\n",
+      "Postition : 20  |  Value :  4181  |  Index :  19\n",
+      "Postition : 21  |  Value :  6765  |  Index :  20\n"
      ]
     }
    ],
@@ -136,13 +162,7 @@
     "\n",
     "\n",
     "### verify\n",
-    "print(\"*****VERIFY******\")\n",
-    "fibonacci_series = [0,1,1,2,3,5,8,13,21,34,55]\n",
-    "for index,value in enumerate(fibonacci_series):\n",
-    "    print(f\"postion : {index+1}\")\n",
-    "    print(f\"index : {index}\")\n",
-    "    print(f\"value : {value}\")\n",
-    "    print()\n"
+    "original_fib()\n"
    ]
   },
   {
@@ -154,10 +174,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "377\n",
+      "** Fibonacci Series Chart (verification - use) **\n",
+      "\n",
+      "Postition : 1  |  Value :  0  |  Index :  0\n",
+      "Postition : 2  |  Value :  1  |  Index :  1\n",
+      "Postition : 3  |  Value :  1  |  Index :  2\n",
+      "Postition : 4  |  Value :  2  |  Index :  3\n",
+      "Postition : 5  |  Value :  3  |  Index :  4\n",
+      "Postition : 6  |  Value :  5  |  Index :  5\n",
+      "Postition : 7  |  Value :  8  |  Index :  6\n",
+      "Postition : 8  |  Value :  13  |  Index :  7\n",
+      "Postition : 9  |  Value :  21  |  Index :  8\n",
+      "Postition : 10  |  Value :  34  |  Index :  9\n",
+      "Postition : 11  |  Value :  55  |  Index :  10\n",
+      "Postition : 12  |  Value :  89  |  Index :  11\n",
+      "Postition : 13  |  Value :  144  |  Index :  12\n",
+      "Postition : 14  |  Value :  233  |  Index :  13\n",
+      "Postition : 15  |  Value :  377  |  Index :  14\n",
+      "Postition : 16  |  Value :  610  |  Index :  15\n",
+      "Postition : 17  |  Value :  987  |  Index :  16\n",
+      "Postition : 18  |  Value :  1597  |  Index :  17\n",
+      "Postition : 19  |  Value :  2584  |  Index :  18\n",
+      "Postition : 20  |  Value :  4181  |  Index :  19\n",
+      "Postition : 21  |  Value :  6765  |  Index :  20\n"
+     ]
+    }
+   ],
+   "source": [
+    "## my version\n",
+    "\n",
+    "def fib_nth(n):\n",
+    "    counter = 0\n",
+    "    a=0\n",
+    "    b=1\n",
+    "    while counter < n:\n",
+    "        c = a + b\n",
+    "        a,b = b,c\n",
+    "        counter += 1\n",
+    "    return a\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    nth_term = 15\n",
+    "    print(fib_nth(nth_term-1))\n",
+    "\n",
+    "    original_fib()"
+   ]
   },
   {
    "cell_type": "code",
