--- a/file-handling/file-paths/file-paths.ipynb
+++ b/file-handling/file-paths/file-paths.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -29,6 +29,7 @@
      "text": [
       "Jobs - Interview\n",
       "Personal Projects\n",
+      "Practice - Github\n",
       "Practice - NPMS\n",
       "Practice - Python\n",
       "Practice- Computer Vision\n",
@@ -53,7 +54,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "file-paths.ipynb\n"
+      "data\n",
+      "file-paths.ipynb\n",
+      "rough.py\n",
+      "weather_data.csv\n"
      ]
     }
    ],
@@ -65,14 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "file-organizer\n",
       "file-paths\n",
+      "weather_data.csv\n",
       "zipfile\n"
      ]
     }
@@ -104,6 +110,7 @@
       "anagram.ipynb\n",
       "decorators\n",
       "DSA-Python\n",
+      "factorial.py\n",
       "fibonacci\n",
       "file-handling\n",
       "find_nums_list.py\n",
@@ -115,7 +122,8 @@
       "pattern\n",
       "prime_numbers.ipynb\n",
       "README.md\n",
-      "rough.ipynb\n"
+      "rough.ipynb\n",
+      "weather_data.csv\n"
      ]
     }
    ],
