Yt code-yug questions

--- a/generatiors.ipynb
+++ b/generatiors.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Notes\n",
+    "\n",
+    "Generators are a way to create Iterators (campusx - yt / Generators in Python | Advanced Python Programming / ts - 1:40)\n",
+    "\n",
+    "\n",
+    "(my thoughts) Generators ko use karna h to for loop ka use karna padta h\n",
+    "because agar ek generator ko call karoge aur print karoge to\n",
+    "generator object ka address print ho jaata h"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -28,16 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "16"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
