--- a/Duplicate Elements in List/remove-duplicates.ipynb
+++ b/Duplicate Elements in List/remove-duplicates.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "[1, 2, 3, 4, 5, 8, 9, 0, 6, 7, 12]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,14 +120,85 @@
     "# method - 6 | using dictionary\n",
     "\n",
     "\n",
+    "# code-yug - Yt method\n",
+    "## ???\n",
+    "\n",
+    "\n",
+    "\n",
+    "# my method\n",
     "final_dict = {}\n",
-    "\n",
-    "\n",
     "for i in input_list:\n",
     "    if i not in final_dict :\n",
     "        final_dict[i] = final_dict.get(i,0) + 1\n",
     "\n",
     "list(final_dict.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### My methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "any_list = [1,1,0,2,2,3,4,5,3,4,5,6,8,9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "1\n",
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# \n",
+    "\n",
+    "for i in any_list:\n",
+    "    print(any_list.count(i))\n",
+    "\n",
+    "\n",
+    "    \n"
    ]
   },
   {
