--- a/Duplicate Elements in List/print-duplicates-list.ipynb
+++ b/Duplicate Elements in List/print-duplicates-list.ipynb
@@ -77,6 +77,51 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rough"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "any_list = [1,1,0,2,2,3,4,5,3,4,5,6,8,9]\n",
+    "\n",
+    "\n",
+    "for i in any_list:\n",
+    "    if any_list.count(i) == 2:\n",
+    "        print(i)"
+   ]
   }
  ],
  "metadata": {
