--- a/rough.ipynb
+++ b/rough.ipynb
@@ -2,10 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def div_modifier(fun):\n",
+    "    def main(*args):\n",
+    "        for i in args[1:]:\n",
+    "            if i == 0:\n",
+    "                return \"cannot divide by zero\"\n",
+    "        return fun(*args)\n",
+    "    return main\n",
+    "\n",
+    "\n",
+    "\n",
+    "@div_modifier\n",
+    "def div1(a,b):\n",
+    "    return a/b\n",
+    "\n",
+    "@div_modifier\n",
+    "def div2(a,b,c):\n",
+    "    return a/b/c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4\n",
+      "cannot divide by zero\n",
+      "\n",
+      "*******************\n",
+      "\n",
+      "0.4\n",
+      "cannot divide by zero\n",
+      "cannot divide by zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = div1(2,5)\n",
+    "y = div1(2,0)\n",
+    "print(x,y, sep = \"\\n\")\n",
+    "\n",
+    "print(\"\\n*******************\\n\")\n",
+    "\n",
+    "z1 = div2(2,1,5)\n",
+    "z2 = div2(2,0,1)\n",
+    "z3 = div2(2,0,0)\n",
+    "print(z1,z2,z3, sep = \"\\n\")\n"
+   ]
   },
   {
    "cell_type": "code",
