--- a/fibonacci/fibonacci.ipynb
+++ b/fibonacci/fibonacci.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -72,6 +72,9 @@
     "    fib = 0, 1, 1, 2, 3, 5, 8, 13, 21, 34,55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181,6765,\n",
     "    for i,j in enumerate(fib):\n",
     "        print(\"Postition : \" + str(i+1), \" | \", \"Value : \", str(j), \" | \",\"Index : \", str(i))\n",
+    "\n",
+    "\n",
+    "\n",
     "original_fib()\n",
     "\n"
    ]
@@ -163,6 +166,47 @@
     "\n",
     "### verify\n",
     "original_fib()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "34\n",
+      "4181\n"
+     ]
+    }
+   ],
+   "source": [
+    "## nth term of fibonacci | recursion | updated (sept/23) | my version\n",
+    "## isme khaas baat ye hai ki, function position as an input lega\n",
+    "## eg fib_nth(5) means 5th position par kya value h\n",
+    "\n",
+    "def fib_nth(n):\n",
+    "    if n <= 0:\n",
+    "        return \"Invalid\"\n",
+    "    \n",
+    "    elif n == 1: # 1st term of fibonacci series\n",
+    "        return 0\n",
+    "    \n",
+    "    elif n == 2: # 2nd term of fibonacci series\n",
+    "        return 1\n",
+    "    \n",
+    "    else:\n",
+    "        return fib_nth(n-1) + fib_nth(n-2)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    print(fib_nth(5))\n",
+    "    print(fib_nth(10))\n",
+    "    print(fib_nth(20))"
    ]
   },
   {
