--- a/OOPs/rough.ipynb
+++ b/OOPs/rough.ipynb
@@ -2,78 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Gadget:\n",
-    "    def __init__(self, gadget_name, brand_name, weight):\n",
-    "        self.gadget_name = gadget_name\n",
-    "        self.brand_name = brand_name\n",
-    "        self.weight = weight\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# types of gadget = Laptop, Smartphone, music player, dvd player\n",
-    "\n",
-    "class Smartphone(Gadget):\n",
-    "    def __init__(self, gadget_name, brand_name, weight, processor, ram):\n",
-    "        super().__init__(gadget_name, brand_name, weight)\n",
-    "        self.processor = processor\n",
-    "        self.ram = ram\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = Smartphone(\"Smartphone\", \"Apple\", 30, \"OS X\", \"4 gb\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sahil\n",
+      "2\n",
+      "Apple\n",
+      "\n",
+      "\n",
+      "\n",
+      "Sahil\n",
+      "2\n",
+      "Apple India\n",
+      "\n",
+      "\n",
+      "\n",
+      "Michael\n",
+      "5\n",
+      "Apple\n",
+      "\n",
+      "\n",
+      "\n",
+      "Michael\n",
+      "5\n",
+      "Apple USA\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
-   "source": [
-    "x.weight"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Smartphone'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.gadget_name"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
