--- a/anagram.ipynb
+++ b/anagram.ipynb
@@ -140,9 +140,9 @@
     }
    ],
    "source": [
-    "## Rough\n",
+    "## My method\n",
     "\n",
-    "# anagram mean \n",
+    "# anagram meaning \n",
     "\n",
     "\n",
     "\"\"\"\n",
