--- a/Coding Questions - Python/Basic Coding Questions/anagram.ipynb
+++ b/Coding Questions - Python/Basic Coding Questions/anagram.ipynb
@@ -184,8 +184,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d36d5d8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Krish Naik - Yt | Github\n",
+    "## https://github.com/krishnaik06/The-Grand-Complete-Data-Science-Materials/blob/main/Python/Python%20Interview%20Usecases.md\n",
+    "\n",
+    "def are_anagrams(s1, s2):\n",
+    "    return sorted(s1) == sorted(s2)\n",
+    "\n",
+    "str1 = \"listen\"\n",
+    "str2 = \"silent\"\n",
+    "print(are_anagrams(str1, str2))  # Output: True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6296db31",
    "metadata": {},
    "outputs": [],
    "source": []
