--- a/Lists, Tuples, Strings, Sets, Dict/Lists/list-methods.ipynb
+++ b/Lists, Tuples, Strings, Sets, Dict/Lists/list-methods.ipynb
@@ -90,15 +90,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' \\nIn Python, the `extend` method is a built-in method that allows you to add multiple elements to a list by appending elements from an iterable (e.g., another list, tuple, or any other iterable object) to the end of the original list. This method is particularly useful when you want to combine two lists or add multiple elements to an existing list without creating a new list.\\n\\nHere\\'s the basic syntax of the `extend` method:\\n\\n```python\\nlist.extend(iterable)\\n```\\n\\n- `list`: This is the list to which you want to add elements.\\n- `iterable`: An iterable object (e.g., another list, tuple, or any other iterable) containing the elements you want to add to the original list.\\n\\nHere\\'s an example of how to use the `extend` method:\\n\\n```python\\nfruits = [\"apple\", \"banana\", \"cherry\"]\\nadditional_fruits = [\"orange\", \"grape\"]\\n\\nfruits.extend(additional_fruits)\\n\\nprint(fruits)\\n```\\n\\nOutput:\\n```\\n[\\'apple\\', \\'banana\\', \\'cherry\\', \\'orange\\', \\'grape\\']\\n```\\n\\nIn this example, the `extend` method appends all the elements from the `additional_fruits` list to the `fruits` list, resulting in a single combined list containing all the fruits.\\n\\nIt\\'s important to note that the `extend` method modifies the original list in-place; it doesn\\'t create a new list. If you want to create a new list with the combined elements without modifying the original list, you can use the `+` operator or list concatenation:\\n\\n```python\\nfruits = [\"apple\", \"banana\", \"cherry\"]\\nadditional_fruits = [\"orange\", \"grape\"]\\n\\ncombined_fruits = fruits + additional_fruits\\n\\nprint(combined_fruits)  # This creates a new list\\n```\\n\\nOutput:\\n```\\n[\\'apple\\', \\'banana\\', \\'cherry\\', \\'orange\\', \\'grape\\']\\n```\\n\\nBoth methods achieve the same result of combining two lists, but the `extend` method is often preferred when you want to modify the original list directly for performance reasons or when you need to work with the same list in multiple places in your code.\\n\\n\\n'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## List : extend vs concat\n",
+    "\n",
+    "\"\"\" \n",
+    "In Python, the `extend` method is a built-in method that allows you to add multiple elements to a list by appending elements from an iterable (e.g., another list, tuple, or any other iterable object) to the end of the original list. This method is particularly useful when you want to combine two lists or add multiple elements to an existing list without creating a new list.\n",
+    "\n",
+    "Here's the basic syntax of the `extend` method:\n",
+    "\n",
+    "```python\n",
+    "list.extend(iterable)\n",
+    "```\n",
+    "\n",
+    "- `list`: This is the list to which you want to add elements.\n",
+    "- `iterable`: An iterable object (e.g., another list, tuple, or any other iterable) containing the elements you want to add to the original list.\n",
+    "\n",
+    "Here's an example of how to use the `extend` method:\n",
+    "\n",
+    "```python\n",
+    "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+    "additional_fruits = [\"orange\", \"grape\"]\n",
+    "\n",
+    "fruits.extend(additional_fruits)\n",
+    "\n",
+    "print(fruits)\n",
+    "```\n",
+    "\n",
+    "Output:\n",
+    "```\n",
+    "['apple', 'banana', 'cherry', 'orange', 'grape']\n",
+    "```\n",
+    "\n",
+    "In this example, the `extend` method appends all the elements from the `additional_fruits` list to the `fruits` list, resulting in a single combined list containing all the fruits.\n",
+    "\n",
+    "It's important to note that the `extend` method modifies the original list in-place; it doesn't create a new list. If you want to create a new list with the combined elements without modifying the original list, you can use the `+` operator or list concatenation:\n",
+    "\n",
+    "```python\n",
+    "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+    "additional_fruits = [\"orange\", \"grape\"]\n",
+    "\n",
+    "combined_fruits = fruits + additional_fruits\n",
+    "\n",
+    "print(combined_fruits)  # This creates a new list\n",
+    "```\n",
+    "\n",
+    "Output:\n",
+    "```\n",
+    "['apple', 'banana', 'cherry', 'orange', 'grape']\n",
+    "```\n",
+    "\n",
+    "Both methods achieve the same result of combining two lists, but the `extend` method is often preferred when you want to modify the original list directly for performance reasons or when you need to work with the same list in multiple places in your code.\n",
+    "\n",
+    "\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
